--- a/Mixpanel.xcodeproj/xcshareddata/xcschemes/Mixpanel.xcscheme
+++ b/Mixpanel.xcodeproj/xcshareddata/xcschemes/Mixpanel.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E115947C1CFF1491007F8B4F"
-               BuildableName = "Mixpanel.framework"
+               BuildableName = "MixpanelSwift.framework"
                BlueprintName = "Mixpanel"
                ReferencedContainer = "container:Mixpanel.xcodeproj">
             </BuildableReference>
@@ -48,7 +48,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E115947C1CFF1491007F8B4F"
-            BuildableName = "Mixpanel.framework"
+            BuildableName = "MixpanelSwift.framework"
             BlueprintName = "Mixpanel"
             ReferencedContainer = "container:Mixpanel.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E115947C1CFF1491007F8B4F"
-            BuildableName = "Mixpanel.framework"
+            BuildableName = "MixpanelSwift.framework"
             BlueprintName = "Mixpanel"
             ReferencedContainer = "container:Mixpanel.xcodeproj">
          </BuildableReference>
